sites/website/src/docs/2.x/api/fast-element.md
---
id: "fast-element"
title: "fast-element "
layout: 2x-api
eleventyNavigation:
  key: "api2xfast-element"
  parent: "api2x"
  title: "fast-element "
navigationOptions:
  activeKey: "api2xfast-element"
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[@microsoft/fast-element](../fast-element/index.html)


Core APIs for building standards-based Web Components with FAST Element.

## Classes

<table><thead><tr><th>

Class


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AttributeDefinition](../fast-element.attributedefinition/)


</td><td>

An implementation of [Accessor](../fast-element.accessor/) that supports reactivity, change callbacks, attribute reflection, and type conversion for custom elements.


</td></tr>
<tr><td>

[ChildrenDirective](../fast-element.childrendirective/)


</td><td>

The runtime behavior for child node observation.


</td></tr>
<tr><td>

[DefaultExecutionContext](../fast-element.defaultexecutioncontext/)


</td><td>

The default execution context for template views.


</td></tr>
<tr><td>

[ElementController](../fast-element.elementcontroller/)


</td><td>

Controls the lifecycle and rendering of a `FASTElement`<!-- -->.


</td></tr>
<tr><td>

[ElementStyles](../fast-element.elementstyles/)


</td><td>

Represents styles that can be applied to a custom element.


</td></tr>
<tr><td>

[FASTElementDefinition](../fast-element.fastelementdefinition/)


</td><td>

Defines metadata for a FASTElement.


</td></tr>
<tr><td>

[HTMLBindingDirective](../fast-element.htmlbindingdirective/)


</td><td>

The central binding directive that bridges data expressions and DOM updates.

HTMLBindingDirective fulfills three roles simultaneously: - \*\*HTMLDirective\*\*: Produces placeholder HTML via createHTML() during template authoring. - \*\*ViewBehaviorFactory\*\*: Creates behaviors (returns itself) during view creation. - \*\*ViewBehavior / EventListener\*\*: Attaches to a DOM node during bind, manages expression observers for reactive updates, and handles DOM events directly.

The aspectType (set by HTMLDirective.assignAspect during template processing) determines which DOM "sink" function is used to apply values — e.g., setAttribute for attributes, addEventListener for events, textContent for content.


</td></tr>
<tr><td>

[HTMLView](../fast-element.htmlview/)


</td><td>

The standard View implementation, which also implements ElementView and SyntheticView.


</td></tr>
<tr><td>

[InlineTemplateDirective](../fast-element.inlinetemplatedirective/)


</td><td>

Inlines a template into another template.


</td></tr>
<tr><td>

[PropertyChangeNotifier](../fast-element.propertychangenotifier/)


</td><td>

An implementation of Notifier that allows subscribers to be notified of individual property changes on an object.


</td></tr>
<tr><td>

[RefDirective](../fast-element.refdirective/)


</td><td>

The runtime behavior for template references.


</td></tr>
<tr><td>

[RenderBehavior](../fast-element.renderbehavior/)


</td><td>

A Behavior that enables advanced rendering.


</td></tr>
<tr><td>

[RenderDirective](../fast-element.renderdirective/)


</td><td>

A Directive that enables use of the RenderBehavior.


</td></tr>
<tr><td>

[RepeatBehavior](../fast-element.repeatbehavior/)


</td><td>

A behavior that renders a template for each item in an array.


</td></tr>
<tr><td>

[RepeatDirective](../fast-element.repeatdirective/)


</td><td>

A directive that configures list rendering.


</td></tr>
<tr><td>

[Schema](../fast-element.schema/)


</td><td>

A constructed JSON schema from a template


</td></tr>
<tr><td>

[SlottedDirective](../fast-element.slotteddirective/)


</td><td>

The runtime behavior for slotted node observation.


</td></tr>
<tr><td>

[Sort](../fast-element.sort/)


</td><td>

A sort array indicates new index positions of array items.


</td></tr>
<tr><td>

[Splice](../fast-element.splice/)


</td><td>

A splice map is a representation of how a previous array of items was transformed into a new array of items. Conceptually it is a list of tuples of

(index, removed, addedCount)

which are kept in ascending index order of. The tuple represents that at the \|index\|, \|removed\| sequence of items were removed, and counting forward from \|index\|, \|addedCount\| items were added.


</td></tr>
<tr><td>

[SubscriberSet](../fast-element.subscriberset/)


</td><td>

An implementation of [Notifier](../fast-element.notifier/) that efficiently keeps track of subscribers interested in a specific change notification on an observable subject.


</td></tr>
<tr><td>

[ViewTemplate](../fast-element.viewtemplate/)


</td><td>

A template capable of creating HTMLView instances or rendering directly to DOM.


</td></tr>
</tbody></table>

## Abstract Classes

<table><thead><tr><th>

Abstract Class


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[Binding](../fast-element.binding/)


</td><td>

Captures a binding expression along with related information and capabilities.


</td></tr>
<tr><td>

[NodeObservationDirective](../fast-element.nodeobservationdirective/)


</td><td>

A base class for node observation.


</td></tr>
<tr><td>

[StatelessAttachedAttributeDirective](../fast-element.statelessattachedattributedirective/)


</td><td>

A base class used for attribute directives that don't need internal state.


</td></tr>
</tbody></table>

## Enumerations

<table><thead><tr><th>

Enumeration


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[Stages](../fast-element.stages/)


</td><td>

The various lifecycle stages of an ElementController.


</td></tr>
</tbody></table>

## Functions

<table><thead><tr><th>

Function


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[attr(config)](../fast-element.attr/)


</td><td>

Decorator: Specifies an HTML attribute.


</td></tr>
<tr><td>

[attr(target, prop)](../fast-element.attr_1/)


</td><td>

Decorator: Specifies an HTML attribute.


</td></tr>
<tr><td>

[children(propertyOrOptions)](../fast-element.children/)


</td><td>

A directive that observes the `childNodes` of an element and updates a property whenever they change.


</td></tr>
<tr><td>

[composedContains(reference, test)](../fast-element.composedcontains/)


</td><td>

Determines if the reference element contains the test element in a "composed" DOM tree that ignores shadow DOM boundaries.

Returns true of the test element is a descendent of the reference, or exists in a shadow DOM that is a logical descendent of the reference. Otherwise returns false.


</td></tr>
<tr><td>

[composedParent(element)](../fast-element.composedparent/)


</td><td>

Retrieves the "composed parent" element of a node, ignoring DOM tree boundaries. When the parent of a node is a shadow-root, it will return the host element of the shadow root. Otherwise it will return the parent node or null if no parent node exists.


</td></tr>
<tr><td>

[computedState(initialize, name)](../fast-element.computedstate/)


</td><td>

**_(BETA)_** Creates a ComputedState.


</td></tr>
<tr><td>

[cssDirective()](../fast-element.cssdirective/)


</td><td>

Decorator: Defines a CSSDirective.


</td></tr>
<tr><td>

[customElement(nameOrDef)](../fast-element.customelement/)


</td><td>

Decorator: Defines a platform custom element based on `FASTElement`<!-- -->.


</td></tr>
<tr><td>

[elements(selector)](../fast-element.elements/)


</td><td>

Creates a function that can be used to filter a Node array, selecting only elements.


</td></tr>
<tr><td>

[enableDebug()](../fast-element.enabledebug/)


</td><td>

Enables human-readable FAST debug messages.


</td></tr>
<tr><td>

[htmlDirective(options)](../fast-element.htmldirective/)


</td><td>

Decorator: Defines an HTMLDirective.


</td></tr>
<tr><td>

[lengthOf(array)](../fast-element.lengthof/)


</td><td>

Enables observing the length of an array.


</td></tr>
<tr><td>

[listener(expression, options)](../fast-element.listener/)


</td><td>

Creates an event listener binding.


</td></tr>
<tr><td>

[normalizeBinding(value)](../fast-element.normalizebinding/)


</td><td>

Normalizes the input value into a binding.


</td></tr>
<tr><td>

[observable(target, nameOrAccessor)](../fast-element.observable/)


</td><td>

Decorator: Defines an observable property on the target.


</td></tr>
<tr><td>

[oneTime(expression, policy)](../fast-element.onetime/)


</td><td>

Creates a one time binding


</td></tr>
<tr><td>

[oneWay(expression, policy, isVolatile)](../fast-element.oneway/)


</td><td>

Creates an standard binding.


</td></tr>
<tr><td>

[ownedState(value, options)](../fast-element.ownedstate/)


</td><td>

**_(BETA)_** Creates a reactive state that has its value associated with a specific owner.


</td></tr>
<tr><td>

[reactive(object, deep)](../fast-element.reactive/)


</td><td>

**_(BETA)_** Converts a plain object to a reactive, observable object.


</td></tr>
<tr><td>

[ref(propertyName)](../fast-element.ref/)


</td><td>

A directive that observes the updates a property with a reference to the element.


</td></tr>
<tr><td>

[render(value, template)](../fast-element.render/)


</td><td>

Creates a RenderDirective for use in advanced rendering scenarios.


</td></tr>
<tr><td>

[repeat(items, template, options)](../fast-element.repeat/)


</td><td>

A directive that enables list rendering.


</td></tr>
<tr><td>

[signal(expression, options, policy)](../fast-element.signal/)


</td><td>

Creates a signal binding configuration with the supplied options.


</td></tr>
<tr><td>

[slotted(propertyOrOptions)](../fast-element.slotted/)


</td><td>

A directive that observes the `assignedNodes()` of a slot and updates a property whenever they change.


</td></tr>
<tr><td>

[sortedCount(array)](../fast-element.sortedcount/)


</td><td>

Enables observing the sorted property of an array.


</td></tr>
<tr><td>

[state(value, options)](../fast-element.state/)


</td><td>

**_(BETA)_** Creates a reactive state value.


</td></tr>
<tr><td>

[twoWay(expression, optionsOrChangeEvent, policy, isBindingVolatile)](../fast-element.twoway/)


</td><td>

Creates a default binding.


</td></tr>
<tr><td>

[volatile(target, name, descriptor)](../fast-element.volatile/)


</td><td>

Decorator: Marks a property getter as having volatile observable dependencies.


</td></tr>
<tr><td>

[watch(object, subscriber)](../fast-element.watch/)


</td><td>

**_(BETA)_** Deeply subscribes to changes in existing observable objects.


</td></tr>
<tr><td>

[when(condition, templateOrTemplateBinding, elseTemplateOrTemplateBinding)](../fast-element.when/)


</td><td>

A directive that enables basic conditional rendering in a template.


</td></tr>
</tbody></table>

## Interfaces

<table><thead><tr><th>

Interface


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AccessCachedPath](../fast-element.accesscachedpath/)


</td><td>

A path discovered from an access expression.


</td></tr>
<tr><td>

[Accessor](../fast-element.accessor/)


</td><td>

Represents a getter/setter property accessor on an object.


</td></tr>
<tr><td>

[ArrayObserver](../fast-element.arrayobserver/)


</td><td>

An observer for arrays.


</td></tr>
<tr><td>

[Aspected](../fast-element.aspected/)


</td><td>

Represents something that applies to a specific aspect of the DOM.


</td></tr>
<tr><td>

[BindingDirective](../fast-element.bindingdirective/)


</td><td>

The directive from which a binding originates.


</td></tr>
<tr><td>

[CachedPathCommon](../fast-element.cachedpathcommon/)


</td><td>

Common metadata for paths cached while parsing a template.


</td></tr>
<tr><td>

[CaptureType](../fast-element.capturetype/)


</td><td>

A marker interface used to capture types when interpolating Directive helpers into templates.


</td></tr>
<tr><td>

[ChildListDirectiveOptions](../fast-element.childlistdirectiveoptions/)


</td><td>

The options used to configure child list observation.


</td></tr>
<tr><td>

[ChildrenMap](../fast-element.childrenmap/)


</td><td>

Describes a child custom element binding referenced by a schema path.


</td></tr>
<tr><td>

[ContentTemplate](../fast-element.contenttemplate/)


</td><td>

A simple template that can create ContentView instances.


</td></tr>
<tr><td>

[ContentView](../fast-element.contentview/)


</td><td>

A simple View that can be interpolated into HTML content.


</td></tr>
<tr><td>

[CSSDirective](../fast-element.cssdirective/)


</td><td>

Directive for use in CSS templates.


</td></tr>
<tr><td>

[CSSDirectiveDefinition](../fast-element.cssdirectivedefinition/)


</td><td>

Defines metadata for a CSSDirective.


</td></tr>
<tr><td>

[DefaultCachedPath](../fast-element.defaultcachedpath/)


</td><td>

A path discovered from a default binding.


</td></tr>
<tr><td>

[Disposable](../fast-element.disposable/)


</td><td>

Provides a mechanism for releasing resources.


</td></tr>
<tr><td>

[DOMPolicy](../fast-element.dompolicy/)


</td><td>

A policy that controls whether values can be written to DOM sinks.


</td></tr>
<tr><td>

[ElementControllerStrategy](../fast-element.elementcontrollerstrategy/)


</td><td>

A type that instantiates an ElementController


</td></tr>
<tr><td>

[ElementView](../fast-element.elementview/)


</td><td>

A View representing DOM nodes specifically for rendering the view of a custom element.


</td></tr>
<tr><td>

[ElementViewTemplate](../fast-element.elementviewtemplate/)


</td><td>

A template capable of creating views specifically for rendering custom elements.


</td></tr>
<tr><td>

[EventCachedPath](../fast-element.eventcachedpath/)


</td><td>

A path discovered from an event binding.


</td></tr>
<tr><td>

[ExecutionContext](../fast-element.executioncontext/)


</td><td>

Provides additional contextual information available to behaviors and expressions.


</td></tr>
<tr><td>

[ExpressionController](../fast-element.expressioncontroller/)


</td><td>

Controls the lifecycle of an expression and provides relevant context.


</td></tr>
<tr><td>

[ExpressionNotifier](../fast-element.expressionnotifier/)


</td><td>

Enables evaluation of and subscription to a binding.


</td></tr>
<tr><td>

[ExpressionObserver](../fast-element.expressionobserver/)


</td><td>

Observes an expression for changes.


</td></tr>
<tr><td>

[FASTElement](../fast-element.fastelement/)


</td><td>

Represents a custom element based on the FASTElement infrastructure.


</td></tr>
<tr><td>

[FASTElementConstructor](../fast-element.fastelementconstructor/)


</td><td>

The FASTElement constructor and static registration helpers.


</td></tr>
<tr><td>

[HostBehavior](../fast-element.hostbehavior/)


</td><td>

Represents an object that can contribute behavior to a host.


</td></tr>
<tr><td>

[HostController](../fast-element.hostcontroller/)


</td><td>

Controls the lifecycle and context of behaviors and styles associated with a component host.


</td></tr>
<tr><td>

[HTMLDirective](../fast-element.htmldirective/)


</td><td>

Instructs the template engine to apply behavior to a node.


</td></tr>
<tr><td>

[HTMLDirectiveDefinition](../fast-element.htmldirectivedefinition/)


</td><td>

Defines metadata for an HTMLDirective.


</td></tr>
<tr><td>

[HTMLTemplateCompilationResult](../fast-element.htmltemplatecompilationresult/)


</td><td>

The result of a template compilation operation.


</td></tr>
<tr><td>

[JSONSchema](../fast-element.jsonschema/)


</td><td>

A JSON schema describing a root property.


</td></tr>
<tr><td>

[JSONSchemaCommon](../fast-element.jsonschemacommon/)


</td><td>

Common properties shared by schema nodes.


</td></tr>
<tr><td>

[JSONSchemaDefinition](../fast-element.jsonschemadefinition/)


</td><td>

A reusable JSON schema definition.


</td></tr>
<tr><td>

[LengthObserver](../fast-element.lengthobserver/)


</td><td>

Observes array lengths.


</td></tr>
<tr><td>

[NodeBehaviorOptions](../fast-element.nodebehavioroptions/)


</td><td>

Options for configuring node observation behavior.


</td></tr>
<tr><td>

[Notifier](../fast-element.notifier/)


</td><td>

Provides change notifications for an observed subject.


</td></tr>
<tr><td>

[ObservationRecord](../fast-element.observationrecord/)


</td><td>

A record of observable property access.


</td></tr>
<tr><td>

[PartialFASTElementDefinition](../fast-element.partialfastelementdefinition/)


</td><td>

Represents metadata configuration for a custom element.


</td></tr>
<tr><td>

[PartialHTMLDirectiveDefinition](../fast-element.partialhtmldirectivedefinition/)


</td><td>

Represents metadata configuration for an HTMLDirective.


</td></tr>
<tr><td>

[RegisterPathConfig](../fast-element.registerpathconfig/)


</td><td>

Configuration for registering a path with a schema.


</td></tr>
<tr><td>

[RepeatCachedPath](../fast-element.repeatcachedpath/)


</td><td>

A path discovered from a repeat directive.


</td></tr>
<tr><td>

[RepeatOptions](../fast-element.repeatoptions/)


</td><td>

Options for configuring repeat behavior.


</td></tr>
<tr><td>

[ShadowRootOptions](../fast-element.shadowrootoptions/)


</td><td>

Shadow root initialization options.


</td></tr>
<tr><td>

[SlottedDirectiveOptions](../fast-element.slotteddirectiveoptions/)


</td><td>

The options used to configure slotted node observation.


</td></tr>
<tr><td>

[SortObserver](../fast-element.sortobserver/)


</td><td>

Observes array sort.


</td></tr>
<tr><td>

[SpliceStrategy](../fast-element.splicestrategy/)


</td><td>

An approach to tracking changes in an array.


</td></tr>
<tr><td>

[StyleStrategy](../fast-element.stylestrategy/)


</td><td>

Implemented to provide specific behavior when adding/removing styles for elements.


</td></tr>
<tr><td>

[StyleTarget](../fast-element.styletarget/)


</td><td>

A node that can be targeted by styles.


</td></tr>
<tr><td>

[Subscriber](../fast-element.subscriber/)


</td><td>

Implemented by objects that are interested in change notifications.


</td></tr>
<tr><td>

[SubtreeDirectiveOptions](../fast-element.subtreedirectiveoptions/)


</td><td>

The options used to configure subtree observation.


</td></tr>
<tr><td>

[SyntheticView](../fast-element.syntheticview/)


</td><td>

A view representing a range of DOM nodes which can be added/removed ad hoc.


</td></tr>
<tr><td>

[SyntheticViewTemplate](../fast-element.syntheticviewtemplate/)


</td><td>

A template capable of rendering views not specifically connected to custom elements.


</td></tr>
<tr><td>

[TemplateLifecycleCallbacks](../fast-element.templatelifecyclecallbacks/)


</td><td>

Lifecycle callbacks for template events.


</td></tr>
<tr><td>

[TwoWaySettings](../fast-element.twowaysettings/)


</td><td>

The settings required to enable two-way binding.


</td></tr>
<tr><td>

[TypeDefinition](../fast-element.typedefinition/)


</td><td>

A type that can be registered with a `TypeRegistry`<!-- -->.


</td></tr>
<tr><td>

[TypeRegistry](../fast-element.typeregistry/)


</td><td>

A registry that stores definitions by type.


</td></tr>
<tr><td>

[UpdateQueue](../fast-element.updatequeue/)


</td><td>

A work queue used to synchronize writes to the DOM.


</td></tr>
<tr><td>

[ValueConverter](../fast-element.valueconverter/)


</td><td>

Represents objects that can convert values to and from view or model representations.


</td></tr>
<tr><td>

[View](../fast-element.view/)


</td><td>

Represents a collection of DOM nodes which can be bound to a data source.


</td></tr>
<tr><td>

[ViewBehavior](../fast-element.viewbehavior/)


</td><td>

Represents an object that can contribute behavior to a view.


</td></tr>
<tr><td>

[ViewBehaviorFactory](../fast-element.viewbehaviorfactory/)


</td><td>

A factory that can create a [ViewBehavior](../fast-element.viewbehavior/) associated with a particular location within a DOM fragment.


</td></tr>
<tr><td>

[ViewBehaviorOrchestrator](../fast-element.viewbehaviororchestrator/)


</td><td>

Bridges between ViewBehaviors and HostBehaviors, enabling a host to control ViewBehaviors.


</td></tr>
<tr><td>

[ViewController](../fast-element.viewcontroller/)


</td><td>

Controls the lifecycle of a view and provides relevant context.


</td></tr>
</tbody></table>

## Variables

<table><thead><tr><th>

Variable


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[ArrayObserver](../fast-element.arrayobserver/)


</td><td>

An observer for arrays.


</td></tr>
<tr><td>

[AttributeConfiguration](../fast-element.attributeconfiguration/)


</td><td>

Metadata used to configure a custom attribute's behavior.


</td></tr>
<tr><td>

[booleanConverter](../fast-element.booleanconverter/)


</td><td>

A [ValueConverter](../fast-element.valueconverter/) that converts to and from `boolean` values.


</td></tr>
<tr><td>

[Compiler](../fast-element.compiler/)


</td><td>

Common APIs related to compilation.


</td></tr>
<tr><td>

[css](../fast-element.css/)


</td><td>

Transforms a template literal string into styles.


</td></tr>
<tr><td>

[CSSDirective](../fast-element.cssdirective/)


</td><td>

Instructs the css engine to provide styles during CSS template composition.


</td></tr>
<tr><td>

[DOM](../fast-element.dom/)


</td><td>

Common DOM APIs.


</td></tr>
<tr><td>

[DOMAspect](../fast-element.domaspect/)


</td><td>

The type of HTML aspect to target.


</td></tr>
<tr><td>

[DOMPolicy](../fast-element.dompolicy/)


</td><td>

A helper for creating DOM policies.


</td></tr>
<tr><td>

[emptyArray](../fast-element.emptyarray/)


</td><td>

A readonly, empty array.


</td></tr>
<tr><td>

[ExecutionContext](../fast-element.executioncontext/)


</td><td>

Provides additional contextual information available to behaviors and expressions.


</td></tr>
<tr><td>

[FAST](../fast-element.fast/)


</td><td>

The FAST messaging API for warnings and errors.


</td></tr>
<tr><td>

[FASTElement](../fast-element.fastelement/)


</td><td>

A minimal base class for FASTElements that also provides static helpers for working with FASTElements.


</td></tr>
<tr><td>

[fastElementRegistry](../fast-element.fastelementregistry/)


</td><td>

The FAST custom element registry.


</td></tr>
<tr><td>

[html](../fast-element.html/)


</td><td>

Transforms a template literal string into a ViewTemplate.


</td></tr>
<tr><td>

[HTMLDirective](../fast-element.htmldirective/)


</td><td>

Instructs the template engine to apply behavior to a node.


</td></tr>
<tr><td>

[Markup](../fast-element.markup/)


</td><td>

Common APIs related to markup generation.


</td></tr>
<tr><td>

[nullableBooleanConverter](../fast-element.nullablebooleanconverter/)


</td><td>

A [ValueConverter](../fast-element.valueconverter/) that converts to and from `boolean` values. `null`<!-- -->, `undefined`<!-- -->, `""`<!-- -->, and `void` values are converted to `null`<!-- -->.


</td></tr>
<tr><td>

[nullableNumberConverter](../fast-element.nullablenumberconverter/)


</td><td>

A [ValueConverter](../fast-element.valueconverter/) that converts to and from `number` values.


</td></tr>
<tr><td>

[Observable](../fast-element.observable/)


</td><td>

Common Observable APIs.


</td></tr>
<tr><td>

[Parser](../fast-element.parser/)


</td><td>

Common APIs related to content parsing.


</td></tr>
<tr><td>

[schemaRegistry](../fast-element.schemaregistry/)


</td><td>

Module-level registry that maps custom element names to their schema maps. Used for cross-element `$ref` resolution (e.g. nested element schemas). Each Schema instance registers itself here on construction.


</td></tr>
<tr><td>

[Signal](../fast-element.signal/)


</td><td>

The gateway to signal APIs.


</td></tr>
<tr><td>

[SourceLifetime](../fast-element.sourcelifetime/)


</td><td>

Describes how the source's lifetime relates to its controller's lifetime.


</td></tr>
<tr><td>

[SpliceStrategy](../fast-element.splicestrategy/)


</td><td>

Functionality related to tracking changes in arrays.


</td></tr>
<tr><td>

[SpliceStrategySupport](../fast-element.splicestrategysupport/)


</td><td>

Indicates what level of feature support the splice strategy provides.


</td></tr>
<tr><td>

[TwoWaySettings](../fast-element.twowaysettings/)


</td><td>

Enables configuring two-way binding settings.


</td></tr>
<tr><td>

[Updates](../fast-element.updates/)


</td><td>

The default UpdateQueue.


</td></tr>
<tr><td>

[ViewBehaviorOrchestrator](../fast-element.viewbehaviororchestrator/)


</td><td>

Bridges between ViewBehaviors and HostBehaviors, enabling a host to control ViewBehaviors.


</td></tr>
</tbody></table>

## Type Aliases

<table><thead><tr><th>

Type Alias


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AddViewBehaviorFactory](../fast-element.addviewbehaviorfactory/)


</td><td>

Used to add behavior factories when constructing templates.


</td></tr>
<tr><td>

[AttributeConfiguration](../fast-element.attributeconfiguration/)


</td><td>

Metadata used to configure a custom attribute's behavior.


</td></tr>
<tr><td>

[AttributeMode](../fast-element.attributemode/)


</td><td>

The mode that specifies the runtime behavior of the attribute.


</td></tr>
<tr><td>

[CachedPath](../fast-element.cachedpath/)


</td><td>

A path discovered while parsing a template.


</td></tr>
<tr><td>

[CachedPathMap](../fast-element.cachedpathmap/)


</td><td>

A map from element names and root properties to JSON schemas.


</td></tr>
<tr><td>

[Callable](../fast-element.callable/)


</td><td>

Represents a callable type such as a function or an object with a "call" method.


</td></tr>
<tr><td>

[ChildrenDirectiveOptions](../fast-element.childrendirectiveoptions/)


</td><td>

The options used to configure child/subtree node observation.


</td></tr>
<tr><td>

[Class](../fast-element.class/)


</td><td>

Represents a constructable class with a prototype.


</td></tr>
<tr><td>

[CompilationStrategy](../fast-element.compilationstrategy/)


</td><td>

A function capable of compiling a template from the preprocessed form produced by the html template function into a result that can instantiate views.


</td></tr>
<tr><td>

[CompiledViewBehaviorFactory](../fast-element.compiledviewbehaviorfactory/)


</td><td>

Represents a ViewBehaviorFactory after the compilation process has completed.


</td></tr>
<tr><td>

[ComposableStyles](../fast-element.composablestyles/)


</td><td>

Represents styles that can be composed into the ShadowDOM of a custom element.


</td></tr>
<tr><td>

[ComputedBuilder](../fast-element.computedbuilder/)


</td><td>

**_(BETA)_** Provides computed state capabilities.


</td></tr>
<tr><td>

[ComputedInitializer](../fast-element.computedinitializer/)


</td><td>

**_(BETA)_** A callback that initializes the computation.


</td></tr>
<tr><td>

[ComputedSetupCallback](../fast-element.computedsetupcallback/)


</td><td>

**_(BETA)_** A callback that enables computation setup.


</td></tr>
<tr><td>

[ComputedState](../fast-element.computedstate/)


</td><td>

**_(BETA)_** State whose value is computed from other dependencies.


</td></tr>
<tr><td>

[Constructable](../fast-element.constructable/)


</td><td>

Represents a type which can be constructed with the new operator.


</td></tr>
<tr><td>

[ConstructibleStyleStrategy](../fast-element.constructiblestylestrategy/)


</td><td>

A type that instantiates a StyleStrategy.


</td></tr>
<tr><td>

[CSSTemplateTag](../fast-element.csstemplatetag/)


</td><td>

Transforms a template literal string into styles.


</td></tr>
<tr><td>

[CSSValue](../fast-element.cssvalue/)


</td><td>

Represents the types of values that can be interpolated into a template.


</td></tr>
<tr><td>

[DecoratorAttributeConfiguration](../fast-element.decoratorattributeconfiguration/)


</td><td>

Metadata used to configure a custom attribute's behavior through a decorator.


</td></tr>
<tr><td>

[DOMAspect](../fast-element.domaspect/)


</td><td>

The type of HTML aspect to target.


</td></tr>
<tr><td>

[DOMAspectGuards](../fast-element.domaspectguards/)


</td><td>

Aspect-specific guards for a DOM Policy.


</td></tr>
<tr><td>

[DOMElementGuards](../fast-element.domelementguards/)


</td><td>

Element-specific guards for a DOM Policy.


</td></tr>
<tr><td>

[DOMGuards](../fast-element.domguards/)


</td><td>

Guard configuration for a DOM Policy.


</td></tr>
<tr><td>

[DOMPolicyOptions](../fast-element.dompolicyoptions/)


</td><td>

Options for creating a DOM Policy.


</td></tr>
<tr><td>

[DOMSink](../fast-element.domsink/)


</td><td>

A function used to send values to a DOM sink.


</td></tr>
<tr><td>

[DOMSinkGuards](../fast-element.domsinkguards/)


</td><td>

A specific DOM sink guard for a node aspect.


</td></tr>
<tr><td>

[ElementsFilter](../fast-element.elementsfilter/)


</td><td>

Elements filter function type.


</td></tr>
<tr><td>

[Expression](../fast-element.expression/)


</td><td>

The signature of an arrow function capable of being evaluated against source data and within an execution context.


</td></tr>
<tr><td>

[FASTElementExtension](../fast-element.fastelementextension/)


</td><td>

A callback that receives a FASTElementDefinition during element registration. Extensions are invoked before the element is registered with the platform, allowing plugins to inspect or act on the resolved definition.


</td></tr>
<tr><td>

[FASTElementTemplateResolver](../fast-element.fastelementtemplateresolver/)


</td><td>

Resolves an element template from a composed definition.


</td></tr>
<tr><td>

[HTMLTemplateTag](../fast-element.htmltemplatetag/)


</td><td>

Transforms a template literal string into a ViewTemplate.


</td></tr>
<tr><td>

[OwnedState](../fast-element.ownedstate/)


</td><td>

**_(BETA)_** A read/write stateful value associated with an owner.


</td></tr>
<tr><td>

[ReadonlyOwnedState](../fast-element.readonlyownedstate/)


</td><td>

**_(BETA)_** A readonly stateful value associated with an object owner.


</td></tr>
<tr><td>

[ReadonlyState](../fast-element.readonlystate/)


</td><td>

**_(BETA)_** A readonly stateful value.


</td></tr>
<tr><td>

[SourceLifetime](../fast-element.sourcelifetime/)


</td><td>

Describes how the source's lifetime relates to its controller's lifetime.


</td></tr>
<tr><td>

[SpliceStrategySupport](../fast-element.splicestrategysupport/)


</td><td>

The available values for SpliceStrategySupport.


</td></tr>
<tr><td>

[State](../fast-element.state/)


</td><td>

**_(BETA)_** A read/write stateful value.


</td></tr>
<tr><td>

[StateOptions](../fast-element.stateoptions/)


</td><td>

**_(BETA)_** Options for creating state.


</td></tr>
<tr><td>

[TemplateValue](../fast-element.templatevalue/)


</td><td>

Represents the types of values that can be interpolated into a template.


</td></tr>
<tr><td>

[TrustedTypesPolicy](../fast-element.trustedtypespolicy/)


</td><td>

A policy for use with the standard trustedTypes platform API.


</td></tr>
<tr><td>

[TwoWayBindingOptions](../fast-element.twowaybindingoptions/)


</td><td>

The twoWay binding options.


</td></tr>
<tr><td>

[ViewBehaviorTargets](../fast-element.viewbehaviortargets/)


</td><td>

The target nodes available to a behavior.


</td></tr>
</tbody></table>
