sites/website/src/docs/3.x/api/fast-element.md
---
id: "fast-element"
title: "fast-element "
layout: 3x-api
eleventyNavigation:
  key: "api3xfast-element"
  parent: "api3x"
  title: "fast-element "
navigationOptions:
  activeKey: "api3xfast-element"
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[@microsoft/fast-element](../fast-element/index.html)


## Classes

<table><thead><tr><th>

Class


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AttributeDefinition](../fast-element.attributedefinition/)


</td><td>

An implementation of `Accessor` that supports reactivity, change callbacks, attribute reflection, and type conversion for custom elements.


</td></tr>
<tr><td>

[AttributeMap](../fast-element.attributemap/)


</td><td>

AttributeMap provides functionality for detecting simple (leaf) properties in a generated JSON schema and defining them as attr properties on a class prototype.

A property is a candidate for attr when its schema entry has no nested `properties`<!-- -->, no `type`<!-- -->, and no `anyOf` — for example, a plain `foo` binding.

When `attribute-name-strategy` is `"camelCase"` (the default), the binding key is treated as a camelCase property name and the HTML attribute name is derived by converting it to kebab-case (e.g. property `fooBar` → attribute `foo-bar`<!-- -->). This matches the build-time `attribute-name-strategy` option in `@microsoft/fast-build`<!-- -->.

When `attribute-name-strategy` is `"none"`<!-- -->, the binding key is used as both the attribute name and property name — no normalization is applied.

Properties already decorated with `attr` or `observable` on the class are left untouched.


</td></tr>
<tr><td>

[ChildrenDirective](../fast-element.childrendirective/)


</td><td>

The runtime behavior for child node observation.


</td></tr>
<tr><td>

[ContextEvent](../fast-element.contextevent/)


</td><td>

An event fired by a context requester to signal it desires a named context.

A provider should inspect the `context` property of the event to determine if it has a value that can satisfy the request, calling the `callback` with the requested value if so.

If the requested context event contains a truthy `multiple` value, then a provider can call the callback multiple times if the value is changed, if this is the case the provider should pass a `dispose` method to the callback which requesters can invoke to indicate they no longer wish to receive these updates.


</td></tr>
<tr><td>

[ElementController](../fast-element.elementcontroller/)


</td><td>

Controls the lifecycle and rendering of a `FASTElement`<!-- -->.


</td></tr>
<tr><td>

[ElementStyles](../fast-element.elementstyles/)


</td><td>

Represents styles that can be applied to a custom element.


</td></tr>
<tr><td>

[FASTElementDefinition](../fast-element.fastelementdefinition/)


</td><td>

Defines metadata for a FASTElement.


</td></tr>
<tr><td>

[HTMLBindingDirective](../fast-element.htmlbindingdirective/)


</td><td>

The central binding directive that bridges data expressions and DOM updates.

HTMLBindingDirective fulfills three roles simultaneously: - \*\*HTMLDirective\*\*: Produces placeholder HTML via createHTML() during template authoring. - \*\*ViewBehaviorFactory\*\*: Creates behaviors (returns itself) during view creation. - \*\*ViewBehavior / EventListener\*\*: Attaches to a DOM node during bind, manages expression observers for reactive updates, and handles DOM events directly.

The aspectType (set by HTMLDirective.assignAspect during template processing) determines which DOM "sink" function is used to apply values — e.g., setAttribute for attributes, addEventListener for events, textContent for content.


</td></tr>
<tr><td>

[HTMLView](../fast-element.htmlview/)


</td><td>

The standard View implementation, which also implements ElementView and SyntheticView.


</td></tr>
<tr><td>

[HydrationBindingError](../fast-element.hydrationbindingerror/)


</td><td>



</td></tr>
<tr><td>

[HydrationTracker](../fast-element.hydrationtracker/)


</td><td>

Tracks prerendered elements through the hydration lifecycle and fires global callbacks at start and completion. Per-element callbacks (`elementWillHydrate`<!-- -->, `elementDidHydrate`<!-- -->) are handled through definition-level `TemplateLifecycleCallbacks`<!-- -->.


</td></tr>
<tr><td>

[InlineTemplateDirective](../fast-element.inlinetemplatedirective/)


</td><td>

Inlines a template into another template.


</td></tr>
<tr><td>

[ObserverMap](../fast-element.observermap/)


</td><td>

ObserverMap provides functionality for caching binding paths, extracting root properties, and defining observable properties on class prototypes


</td></tr>
<tr><td>

[PropertyChangeNotifier](../fast-element.propertychangenotifier/)


</td><td>

An implementation of Notifier that allows subscribers to be notified of individual property changes on an object.


</td></tr>
<tr><td>

[RefDirective](../fast-element.refdirective/)


</td><td>

The runtime behavior for template references.


</td></tr>
<tr><td>

[RenderBehavior](../fast-element.renderbehavior/)


</td><td>

A Behavior that enables advanced rendering.


</td></tr>
<tr><td>

[RenderDirective](../fast-element.renderdirective/)


</td><td>

A Directive that enables use of the RenderBehavior.


</td></tr>
<tr><td>

[RepeatBehavior](../fast-element.repeatbehavior/)


</td><td>

A behavior that renders a template for each item in an array.


</td></tr>
<tr><td>

[RepeatDirective](../fast-element.repeatdirective/)


</td><td>

A directive that configures list rendering.


</td></tr>
<tr><td>

[ResolverBuilder](../fast-element.resolverbuilder/)


</td><td>

A utility class used that constructs and registers resolvers for a dependency injection container. Supports a standard set of object lifetimes.


</td></tr>
<tr><td>

[Schema](../fast-element.schema/)


</td><td>

A constructed JSON schema from a template


</td></tr>
<tr><td>

[SlottedDirective](../fast-element.slotteddirective/)


</td><td>

The runtime behavior for slotted node observation.


</td></tr>
<tr><td>

[Sort](../fast-element.sort/)


</td><td>

A sort array indicates new index positions of array items.


</td></tr>
<tr><td>

[Splice](../fast-element.splice/)


</td><td>

A splice map is a representation of how a previous array of items was transformed into a new array of items. Conceptually it is a list of tuples of

(index, removed, addedCount)

which are kept in ascending index order of. The tuple represents that at the \|index\|, \|removed\| sequence of items were removed, and counting forward from \|index\|, \|addedCount\| items were added.


</td></tr>
<tr><td>

[SubscriberSet](../fast-element.subscriberset/)


</td><td>

An implementation of [Notifier](../fast-element.notifier/) that efficiently keeps track of subscribers interested in a specific change notification on an observable subject.


</td></tr>
<tr><td>

[TemplateParser](../fast-element.templateparser/)


</td><td>

Converts declarative HTML template markup into the `strings` and `values` arrays that `ViewTemplate.create()` consumes.

This class is intentionally stateless across invocations — all mutable parsing state lives on the call stack or in the `TemplateResolutionContext`<!-- -->.

The parsing pipeline is fully synchronous — no promises are allocated during template resolution.


</td></tr>
<tr><td>

[ViewTemplate](../fast-element.viewtemplate/)


</td><td>

A template capable of creating HTMLView instances or rendering directly to DOM.


</td></tr>
</tbody></table>

## Abstract Classes

<table><thead><tr><th>

Abstract Class


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[Binding](../fast-element.binding/)


</td><td>

Captures a binding expression along with related information and capabilities.


</td></tr>
<tr><td>

[NodeObservationDirective](../fast-element.nodeobservationdirective/)


</td><td>

A base class for node observation.


</td></tr>
<tr><td>

[StatelessAttachedAttributeDirective](../fast-element.statelessattachedattributedirective/)


</td><td>

A base class used for attribute directives that don't need internal state.


</td></tr>
</tbody></table>

## Enumerations

<table><thead><tr><th>

Enumeration


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[Stages](../fast-element.stages/)


</td><td>

The various lifecycle stages of an ElementController.


</td></tr>
</tbody></table>

## Functions

<table><thead><tr><th>

Function


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[all(key, searchAncestors)](../fast-element.all/)


</td><td>

A decorator and DI resolver that will resolve an array of all dependencies registered with the specified key.


</td></tr>
<tr><td>

[assignObservables(schema, rootSchema, data, target, rootProperty)](../fast-element.assignobservables/)


</td><td>

Assign observables to data


</td></tr>
<tr><td>

[assignProxy(schema, rootSchema, target, rootProperty, object)](../fast-element.assignproxy/)


</td><td>

Assign a proxy to an object


</td></tr>
<tr><td>

[attr(config)](../fast-element.attr/)


</td><td>

Decorator: Specifies an HTML attribute.


</td></tr>
<tr><td>

[attr(target, prop)](../fast-element.attr_1/)


</td><td>

Decorator: Specifies an HTML attribute.


</td></tr>
<tr><td>

[attributeMap(config)](../fast-element.attributemap/)


</td><td>

Creates a FAST element extension that enables schema-driven attribute mapping for the resolved definition. When called without arguments, uses the default attribute-mapping behavior. The extension uses `definition.schema` immediately for manual schemas, or the schema generated/augmented by `declarativeTemplate()`<!-- -->.


</td></tr>
<tr><td>

[bindingResolver(previousString, rootPropertyName, path, parentContext, type, schema, currentContext, level)](../fast-element.bindingresolver/)


</td><td>

Creates a binding resolver and records the binding path in the schema.


</td></tr>
<tr><td>

[children(propertyOrOptions)](../fast-element.children/)


</td><td>

A directive that observes the `childNodes` of an element and updates a property whenever they change.


</td></tr>
<tr><td>

[composedContains(reference, test)](../fast-element.composedcontains/)


</td><td>

Determines if the reference element contains the test element in a "composed" DOM tree that ignores shadow DOM boundaries.

Returns true of the test element is a descendent of the reference, or exists in a shadow DOM that is a logical descendent of the reference. Otherwise returns false.


</td></tr>
<tr><td>

[composedParent(element)](../fast-element.composedparent/)


</td><td>

Retrieves the "composed parent" element of a node, ignoring DOM tree boundaries. When the parent of a node is a shadow-root, it will return the host element of the shadow root. Otherwise it will return the parent node or null if no parent node exists.


</td></tr>
<tr><td>

[computedState(initialize, name)](../fast-element.computedstate/)


</td><td>

**_(BETA)_** Creates a ComputedState.


</td></tr>
<tr><td>

[cssDirective()](../fast-element.cssdirective/)


</td><td>

Decorator: Defines a CSSDirective.


</td></tr>
<tr><td>

[customElement(nameOrDef)](../fast-element.customelement/)


</td><td>

Decorator: Defines a platform custom element based on `FASTElement`<!-- -->.


</td></tr>
<tr><td>

[declarativeTemplate(callbacks)](../fast-element.declarativetemplate/)


</td><td>

Returns a declarative template resolver that waits for the matching `<f-template>` element and resolves it into a concrete `ViewTemplate`<!-- -->.


</td></tr>
<tr><td>

[deepEqual(obj1, obj2)](../fast-element.deepequal/)


</td><td>

Deeply compares two objects for equality.


</td></tr>
<tr><td>

[deepMerge(target, source)](../fast-element.deepmerge/)


</td><td>

Deeply merges the source object into the target object.


</td></tr>
<tr><td>

[elements(selector)](../fast-element.elements/)


</td><td>

Creates a function that can be used to filter a Node array, selecting only elements.


</td></tr>
<tr><td>

[enableDebug()](../fast-element.enabledebug/)


</td><td>

Enables human-readable FAST debug messages.


</td></tr>
<tr><td>

[enableHydration(options)](../fast-element.enablehydration/)


</td><td>

Enables hydration support for prerendered FAST elements.


</td></tr>
<tr><td>

[expressionResolver(rootPropertyName, expression, parentContext, level, schema)](../fast-element.expressionresolver/)


</td><td>

Creates a resolver for a chained expression and records its paths in the schema.


</td></tr>
<tr><td>

[extractPathsFromChainedExpression(chainedExpression)](../fast-element.extractpathsfromchainedexpression/)


</td><td>

Extracts all paths from a ChainedExpression, including nested expressions


</td></tr>
<tr><td>

[findDef(schema)](../fast-element.finddef/)


</td><td>

Find a definition This may exist as a $ref at the root or as a $ref in any anyOf or not at all if the Observer Map has not been enabled on a child component


</td></tr>
<tr><td>

[getBooleanBinding(rootPropertyName, expression, parentContext, level, schema)](../fast-element.getbooleanbinding/)


</td><td>

Resolves boolean logic used for f-when and boolean attributes


</td></tr>
<tr><td>

[getChildrenMap(previousString)](../fast-element.getchildrenmap/)


</td><td>

Get details of bindings to the attributes of child custom elements


</td></tr>
<tr><td>

[getExpressionChain(value)](../fast-element.getexpressionchain/)


</td><td>

Gets the expression chain as a configuration object


</td></tr>
<tr><td>

[getIndexOfNextMatchingTag(openingTagStartSlice, openingTag, closingTag, openingTagStartIndex)](../fast-element.getindexofnextmatchingtag/)


</td><td>

Get the index of the next matching tag


</td></tr>
<tr><td>

[getNextBehavior(innerHTML, offset)](../fast-element.getnextbehavior/)


</td><td>

Get the next behavior


</td></tr>
<tr><td>

[getRootPropertyName(rootPropertyName, path, context, type)](../fast-element.getrootpropertyname/)


</td><td>

Get the root property name


</td></tr>
<tr><td>

[htmlDirective(options)](../fast-element.htmldirective/)


</td><td>

Decorator: Defines an HTMLDirective.


</td></tr>
<tr><td>

[ignore(target, property, descriptor)](../fast-element.ignore/)


</td><td>

A decorator that tells the container not to try to inject a dependency.


</td></tr>
<tr><td>

[inject(dependencies)](../fast-element.inject/)


</td><td>

A decorator that specifies what to inject into its target.


</td></tr>
<tr><td>

[isHydratable(view)](../fast-element.ishydratable/)


</td><td>

**_(BETA)_** Tests if a template or ViewController is hydratable.


</td></tr>
<tr><td>

[isHydratable(template)](../fast-element.ishydratable_1/)


</td><td>

**_(BETA)_**


</td></tr>
<tr><td>

[isHydratable(template)](../fast-element.ishydratable_2/)


</td><td>

**_(BETA)_**


</td></tr>
<tr><td>

[isHydratable(template)](../fast-element.ishydratable_3/)


</td><td>

**_(BETA)_**


</td></tr>
<tr><td>

[isPlainObject(value)](../fast-element.isplainobject/)


</td><td>

Checks if a value is a plain object (not an array, null, or other type).


</td></tr>
<tr><td>

[lazy(key)](../fast-element.lazy/)


</td><td>

A decorator that lazily injects a dependency depending on whether the `Key` is present at the time of function call.


</td></tr>
<tr><td>

[lengthOf(array)](../fast-element.lengthof/)


</td><td>

Enables observing the length of an array.


</td></tr>
<tr><td>

[listener(expression, options)](../fast-element.listener/)


</td><td>

Creates an event listener binding.


</td></tr>
<tr><td>

[newInstanceForScope(key)](../fast-element.newinstanceforscope/)


</td><td>

A decorator that indicates that a new instance should be injected scoped to the container that requested the instance.


</td></tr>
<tr><td>

[newInstanceOf(key)](../fast-element.newinstanceof/)


</td><td>

A decorator that indicates that a new instance should be injected.


</td></tr>
<tr><td>

[normalizeBinding(value)](../fast-element.normalizebinding/)


</td><td>

Normalizes the input value into a binding.


</td></tr>
<tr><td>

[observable(target, nameOrAccessor)](../fast-element.observable/)


</td><td>

Decorator: Defines an observable property on the target.


</td></tr>
<tr><td>

[observerMap(config)](../fast-element.observermap/)


</td><td>

Creates a FAST element extension that enables schema-driven observer mapping for the resolved definition. When called without arguments, observes every discovered root property. The extension uses `config.schema`<!-- -->, `definition.schema`<!-- -->, or the schema generated by `declarativeTemplate()`<!-- -->.


</td></tr>
<tr><td>

[oneTime(expression, policy)](../fast-element.onetime/)


</td><td>

Creates a one time binding


</td></tr>
<tr><td>

[oneWay(expression, policy, isVolatile)](../fast-element.oneway/)


</td><td>

Creates an standard binding.


</td></tr>
<tr><td>

[optional(key)](../fast-element.optional/)


</td><td>

A decorator that allows you to optionally inject a dependency depending on whether the \[\[`Key`<!-- -->\]\] is present, for example:


</td></tr>
<tr><td>

[ownedState(value, options)](../fast-element.ownedstate/)


</td><td>

**_(BETA)_** Creates a reactive state that has its value associated with a specific owner.


</td></tr>
<tr><td>

[parseEventArgs(argsString)](../fast-element.parseeventargs/)


</td><td>

Parses the arguments string of an event handler binding into an array of typed argument descriptors. Unrecognised tokens are returned as `"binding"` type with their raw string preserved.

Special arguments: - `$e` — resolves to the DOM event object - `$c` — resolves to the full execution context object

Any other token is treated as a binding path and resolved against the current data source.


</td></tr>
<tr><td>

[pathResolver(path, contextPath, level, rootSchema)](../fast-element.pathresolver/)


</td><td>

Create a function to resolve a value from an object using a path with dot syntax. e.g. "foo.bar"


</td></tr>
<tr><td>

[reactive(object, deep)](../fast-element.reactive/)


</td><td>

**_(BETA)_** Converts a plain object to a reactive, observable object.


</td></tr>
<tr><td>

[ref(propertyName)](../fast-element.ref/)


</td><td>

A directive that observes the updates a property with a reference to the element.


</td></tr>
<tr><td>

[render(value, template)](../fast-element.render/)


</td><td>

Creates a RenderDirective for use in advanced rendering scenarios.


</td></tr>
<tr><td>

[repeat(items, template, options)](../fast-element.repeat/)


</td><td>

A directive that enables list rendering.


</td></tr>
<tr><td>

[signal(expression, options, policy)](../fast-element.signal/)


</td><td>

Creates a signal binding configuration with the supplied options.


</td></tr>
<tr><td>

[singleton()](../fast-element.singleton/)


</td><td>

Registers the decorated class as a singleton dependency; the class will only be created once. Each consecutive time the dependency is resolved, the same instance will be returned.


</td></tr>
<tr><td>

[singleton(options)](../fast-element.singleton_1/)


</td><td>



</td></tr>
<tr><td>

[singleton(target)](../fast-element.singleton_2/)


</td><td>

Registers the `target` class as a singleton dependency; the class will only be created once. Each consecutive time the dependency is resolved, the same instance will be returned.


</td></tr>
<tr><td>

[slotted(propertyOrOptions)](../fast-element.slotted/)


</td><td>

A directive that observes the `assignedNodes()` of a slot and updates a property whenever they change.


</td></tr>
<tr><td>

[sortedCount(array)](../fast-element.sortedcount/)


</td><td>

Enables observing the sorted property of an array.


</td></tr>
<tr><td>

[state(value, options)](../fast-element.state/)


</td><td>

**_(BETA)_** Creates a reactive state value.


</td></tr>
<tr><td>

[transformInnerHTML(innerHTML, index)](../fast-element.transforminnerhtml/)


</td><td>

This is the transform utility for rationalizing declarative HTML syntax with bindings in the ViewTemplate


</td></tr>
<tr><td>

[transient()](../fast-element.transient/)


</td><td>

Registers the decorated class as a transient dependency; each time the dependency is resolved a new instance will be created.


</td></tr>
<tr><td>

[transient(target)](../fast-element.transient_1/)


</td><td>

Registers the `target` class as a transient dependency; each time the dependency is resolved a new instance will be created.


</td></tr>
<tr><td>

[twoWay(expression, optionsOrChangeEvent, policy, isBindingVolatile)](../fast-element.twoway/)


</td><td>

Creates a default binding.


</td></tr>
<tr><td>

[volatile(target, name, descriptor)](../fast-element.volatile/)


</td><td>

Decorator: Marks a property getter as having volatile observable dependencies.


</td></tr>
<tr><td>

[watch(object, subscriber)](../fast-element.watch/)


</td><td>

**_(BETA)_** Deeply subscribes to changes in existing observable objects.


</td></tr>
<tr><td>

[when(condition, templateOrTemplateBinding, elseTemplateOrTemplateBinding)](../fast-element.when/)


</td><td>

A directive that enables basic conditional rendering in a template.


</td></tr>
</tbody></table>

## Interfaces

<table><thead><tr><th>

Interface


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AccessCachedPath](../fast-element.accesscachedpath/)


</td><td>

A path discovered from an access expression.


</td></tr>
<tr><td>

[Accessor](../fast-element.accessor/)


</td><td>

Represents a getter/setter property accessor on an object.


</td></tr>
<tr><td>

[ArrayObserver](../fast-element.arrayobserver/)


</td><td>

An observer for arrays.


</td></tr>
<tr><td>

[Aspected](../fast-element.aspected/)


</td><td>

Represents something that applies to a specific aspect of the DOM.


</td></tr>
<tr><td>

[AttributeDataBindingBehaviorConfig](../fast-element.attributedatabindingbehaviorconfig/)


</td><td>

Attribute binding behavior configuration.


</td></tr>
<tr><td>

[AttributeDirectiveBindingBehaviorConfig](../fast-element.attributedirectivebindingbehaviorconfig/)


</td><td>

Attribute directive binding behavior configuration.


</td></tr>
<tr><td>

[AttributeMapConfig](../fast-element.attributemapconfig/)


</td><td>

Configuration object for the attributeMap extension. Omitting all fields uses the default attribute-mapping behavior.


</td></tr>
<tr><td>

[BaseDataBindingBehaviorConfig](../fast-element.basedatabindingbehaviorconfig/)


</td><td>

Base data binding behavior configuration.


</td></tr>
<tr><td>

[BehaviorConfig](../fast-element.behaviorconfig/)


</td><td>

Base behavior configuration.


</td></tr>
<tr><td>

[BindingDirective](../fast-element.bindingdirective/)


</td><td>

The directive from which a binding originates.


</td></tr>
<tr><td>

[CachedPathCommon](../fast-element.cachedpathcommon/)


</td><td>

Common metadata for paths cached while parsing a template.


</td></tr>
<tr><td>

[CaptureType](../fast-element.capturetype/)


</td><td>

A marker interface used to capture types when interpolating Directive helpers into templates.


</td></tr>
<tr><td>

[ChainedExpression](../fast-element.chainedexpression/)


</td><td>

Declarative chained expression descriptor.


</td></tr>
<tr><td>

[ChildListDirectiveOptions](../fast-element.childlistdirectiveoptions/)


</td><td>

The options used to configure child list observation.


</td></tr>
<tr><td>

[ChildrenMap](../fast-element.childrenmap/)


</td><td>

Describes a child custom element binding referenced by a schema path.


</td></tr>
<tr><td>

[Container](../fast-element.container/)


</td><td>

Implemented by dependency injection containers.


</td></tr>
<tr><td>

[ContainerConfiguration](../fast-element.containerconfiguration/)


</td><td>

Configuration for a dependency injection container.


</td></tr>
<tr><td>

[ContentDataBindingBehaviorConfig](../fast-element.contentdatabindingbehaviorconfig/)


</td><td>

Content binding behavior configuration.


</td></tr>
<tr><td>

[ContentTemplate](../fast-element.contenttemplate/)


</td><td>

A simple template that can create ContentView instances.


</td></tr>
<tr><td>

[ContentView](../fast-element.contentview/)


</td><td>

A simple View that can be interpolated into HTML content.


</td></tr>
<tr><td>

[CSSDirective](../fast-element.cssdirective/)


</td><td>

Directive for use in CSS templates.


</td></tr>
<tr><td>

[CSSDirectiveDefinition](../fast-element.cssdirectivedefinition/)


</td><td>

Defines metadata for a CSSDirective.


</td></tr>
<tr><td>

[DeclarativeExpression](../fast-element.declarativeexpression/)


</td><td>

Declarative expression descriptor.


</td></tr>
<tr><td>

[DefaultCachedPath](../fast-element.defaultcachedpath/)


</td><td>

A path discovered from a default binding.


</td></tr>
<tr><td>

[Disposable](../fast-element.disposable/)


</td><td>

Provides a mechanism for releasing resources.


</td></tr>
<tr><td>

[DOMContainer](../fast-element.domcontainer/)


</td><td>

A Container that is associated with a specific Node in the DOM.


</td></tr>
<tr><td>

[ElementControllerStrategy](../fast-element.elementcontrollerstrategy/)


</td><td>

A type that instantiates an ElementController


</td></tr>
<tr><td>

[ElementView](../fast-element.elementview/)


</td><td>

A View representing DOM nodes specifically for rendering the view of a custom element.


</td></tr>
<tr><td>

[ElementViewTemplate](../fast-element.elementviewtemplate/)


</td><td>

A template capable of creating views specifically for rendering custom elements.


</td></tr>
<tr><td>

[EventCachedPath](../fast-element.eventcachedpath/)


</td><td>

A path discovered from an event binding.


</td></tr>
<tr><td>

[ExecutionContext](../fast-element.executioncontext/)


</td><td>

Provides additional contextual information available to behaviors and expressions.


</td></tr>
<tr><td>

[ExpressionController](../fast-element.expressioncontroller/)


</td><td>

Controls the lifecycle of an expression and provides relevant context.


</td></tr>
<tr><td>

[ExpressionNotifier](../fast-element.expressionnotifier/)


</td><td>

Enables evaluation of and subscription to a binding.


</td></tr>
<tr><td>

[ExpressionObserver](../fast-element.expressionobserver/)


</td><td>

Observes an expression for changes.


</td></tr>
<tr><td>

[Factory](../fast-element.factory/)


</td><td>

Used by the default Resolver to create instances of objects when needed.


</td></tr>
<tr><td>

[FASTElement](../fast-element.fastelement/)


</td><td>

Represents a custom element based on the FASTElement infrastructure.


</td></tr>
<tr><td>

[HostBehavior](../fast-element.hostbehavior/)


</td><td>

Represents an object that can contribute behavior to a host.


</td></tr>
<tr><td>

[HostController](../fast-element.hostcontroller/)


</td><td>

Controls the lifecycle and context of behaviors and styles associated with a component host.


</td></tr>
<tr><td>

[HTMLDirective](../fast-element.htmldirective/)


</td><td>

Instructs the template engine to apply behavior to a node.


</td></tr>
<tr><td>

[HTMLDirectiveDefinition](../fast-element.htmldirectivedefinition/)


</td><td>

Defines metadata for an HTMLDirective.


</td></tr>
<tr><td>

[HTMLTemplateCompilationResult](../fast-element.htmltemplatecompilationresult/)


</td><td>

The result of a template compilation operation.


</td></tr>
<tr><td>

[HydratableView](../fast-element.hydratableview/)


</td><td>



</td></tr>
<tr><td>

[HydrationOptions](../fast-element.hydrationoptions/)


</td><td>

Options for configuring global hydration lifecycle events.


</td></tr>
<tr><td>

[InterfaceConfiguration](../fast-element.interfaceconfiguration/)


</td><td>

Used to configure a dependency injection interface key.


</td></tr>
<tr><td>

[JSONSchema](../fast-element.jsonschema/)


</td><td>

A JSON schema describing a root property.


</td></tr>
<tr><td>

[JSONSchemaCommon](../fast-element.jsonschemacommon/)


</td><td>

Common properties shared by schema nodes.


</td></tr>
<tr><td>

[JSONSchemaDefinition](../fast-element.jsonschemadefinition/)


</td><td>

A reusable JSON schema definition.


</td></tr>
<tr><td>

[LengthObserver](../fast-element.lengthobserver/)


</td><td>

Observes array lengths.


</td></tr>
<tr><td>

[NodeBehaviorOptions](../fast-element.nodebehavioroptions/)


</td><td>

Options for configuring node observation behavior.


</td></tr>
<tr><td>

[Notifier](../fast-element.notifier/)


</td><td>

Provides change notifications for an observed subject.


</td></tr>
<tr><td>

[ObservationRecord](../fast-element.observationrecord/)


</td><td>

A record of observable property access.


</td></tr>
<tr><td>

[ObserverMapConfig](../fast-element.observermapconfig/)


</td><td>

Configuration object for the observerMap extension. `schema` enables non-declarative/manual schema use. When `properties` is omitted, every root property is observed. When `properties` is present, only listed root properties participate in observer-map observation.


</td></tr>
<tr><td>

[ObserverMapPathNode](../fast-element.observermappathnode/)


</td><td>

A node object in the observer-map path tree.

`$observe` controls whether this node itself is observed. When omitted the value is inherited from the nearest ancestor that explicitly sets `$observe`<!-- -->. At the root level the default is `true`<!-- -->.

Child property overrides are keyed by property name.


</td></tr>
<tr><td>

[ParsedEventArg](../fast-element.parsedeventarg/)


</td><td>

A parsed event handler argument descriptor.


</td></tr>
<tr><td>

[PartialFASTElementDefinition](../fast-element.partialfastelementdefinition/)


</td><td>

Represents metadata configuration for a custom element.


</td></tr>
<tr><td>

[PartialHTMLDirectiveDefinition](../fast-element.partialhtmldirectivedefinition/)


</td><td>

Represents metadata configuration for an HTMLDirective.


</td></tr>
<tr><td>

[RegisterPathConfig](../fast-element.registerpathconfig/)


</td><td>

Configuration for registering a path with a schema.


</td></tr>
<tr><td>

[Registration](../fast-element.registration/)


</td><td>

Implemented by objects that wish to register dependencies in the container by creating resolvers.


</td></tr>
<tr><td>

[Registry](../fast-element.registry/)


</td><td>

Implemented by objects that which to register dependencies in a container.


</td></tr>
<tr><td>

[RepeatCachedPath](../fast-element.repeatcachedpath/)


</td><td>

A path discovered from a repeat directive.


</td></tr>
<tr><td>

[RepeatOptions](../fast-element.repeatoptions/)


</td><td>

Options for configuring repeat behavior.


</td></tr>
<tr><td>

[ResolvedStringsAndValues](../fast-element.resolvedstringsandvalues/)


</td><td>

The return type for [TemplateParser.parse()](../fast-element.templateparser.parse/)<!-- -->.


</td></tr>
<tr><td>

[Resolver](../fast-element.resolver/)


</td><td>

Internally, the DI system maps "keys" to "resolvers". A resolver controls how a dependency is resolved. Resolvers for transient, singleton, etc. are provided out of the box, but you can also implement Resolver yourself and supply custom logic for resolution.


</td></tr>
<tr><td>

[ServiceLocator](../fast-element.servicelocator/)


</td><td>

Implemented by objects capable of resolving services and other dependencies.


</td></tr>
<tr><td>

[ShadowRootOptions](../fast-element.shadowrootoptions/)


</td><td>

Shadow root initialization options.


</td></tr>
<tr><td>

[SlottedDirectiveOptions](../fast-element.slotteddirectiveoptions/)


</td><td>

The options used to configure slotted node observation.


</td></tr>
<tr><td>

[SortObserver](../fast-element.sortobserver/)


</td><td>

Observes array sort.


</td></tr>
<tr><td>

[SpliceStrategy](../fast-element.splicestrategy/)


</td><td>

An approach to tracking changes in an array.


</td></tr>
<tr><td>

[StyleStrategy](../fast-element.stylestrategy/)


</td><td>

Implemented to provide specific behavior when adding/removing styles for elements.


</td></tr>
<tr><td>

[StyleTarget](../fast-element.styletarget/)


</td><td>

A node that can be targeted by styles.


</td></tr>
<tr><td>

[Subscriber](../fast-element.subscriber/)


</td><td>

Implemented by objects that are interested in change notifications.


</td></tr>
<tr><td>

[SubtreeDirectiveOptions](../fast-element.subtreedirectiveoptions/)


</td><td>

The options used to configure subtree observation.


</td></tr>
<tr><td>

[SyntheticView](../fast-element.syntheticview/)


</td><td>

A view representing a range of DOM nodes which can be added/removed ad hoc.


</td></tr>
<tr><td>

[SyntheticViewTemplate](../fast-element.syntheticviewtemplate/)


</td><td>

A template capable of rendering views not specifically connected to custom elements.


</td></tr>
<tr><td>

[TemplateDirectiveBehaviorConfig](../fast-element.templatedirectivebehaviorconfig/)


</td><td>

Template directive behavior configuration.


</td></tr>
<tr><td>

[TemplateLifecycleCallbacks](../fast-element.templatelifecyclecallbacks/)


</td><td>

Lifecycle callbacks for template events.


</td></tr>
<tr><td>

[TwoWaySettings](../fast-element.twowaysettings/)


</td><td>

The settings required to enable two-way binding.


</td></tr>
<tr><td>

[UpdateQueue](../fast-element.updatequeue/)


</td><td>

A work queue used to synchronize writes to the DOM.


</td></tr>
<tr><td>

[ValueConverter](../fast-element.valueconverter/)


</td><td>

Represents objects that can convert values to and from view or model representations.


</td></tr>
<tr><td>

[View](../fast-element.view/)


</td><td>

Represents a collection of DOM nodes which can be bound to a data source.


</td></tr>
<tr><td>

[ViewBehavior](../fast-element.viewbehavior/)


</td><td>

Represents an object that can contribute behavior to a view.


</td></tr>
<tr><td>

[ViewBehaviorFactory](../fast-element.viewbehaviorfactory/)


</td><td>

A factory that can create a [ViewBehavior](../fast-element.viewbehavior/) associated with a particular location within a DOM fragment.


</td></tr>
<tr><td>

[ViewBehaviorOrchestrator](../fast-element.viewbehaviororchestrator/)


</td><td>

Bridges between ViewBehaviors and HostBehaviors, enabling a host to control ViewBehaviors.


</td></tr>
<tr><td>

[ViewController](../fast-element.viewcontroller/)


</td><td>

Controls the lifecycle of a view and provides relevant context.


</td></tr>
</tbody></table>

## Variables

<table><thead><tr><th>

Variable


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[ArrayObserver](../fast-element.arrayobserver/)


</td><td>

An observer for arrays.


</td></tr>
<tr><td>

[AttributeConfiguration](../fast-element.attributeconfiguration/)


</td><td>

Metadata used to configure a custom attribute's behavior.


</td></tr>
<tr><td>

[booleanConverter](../fast-element.booleanconverter/)


</td><td>

A [ValueConverter](../fast-element.valueconverter/) that converts to and from `boolean` values.


</td></tr>
<tr><td>

[ComparisonOperator](../fast-element.comparisonoperator/)


</td><td>

Comparison operator tokens.


</td></tr>
<tr><td>

[Compiler](../fast-element.compiler/)


</td><td>

Common APIs related to compilation.


</td></tr>
<tr><td>

[Container](../fast-element.container/)


</td><td>

The key that resolves the dependency injection Container itself.


</td></tr>
<tr><td>

[ContainerConfiguration](../fast-element.containerconfiguration/)


</td><td>

Configuration for a dependency injection container.


</td></tr>
<tr><td>

[Context](../fast-element.context/)


</td><td>

Enables using: [W3C Community Context protocol.](https://github.com/webcomponents-cg/community-protocols/blob/main/proposals/context.md)


</td></tr>
<tr><td>

[contextPrefixDot](../fast-element.contextprefixdot/)


</td><td>

Prefix used for execution context paths.


</td></tr>
<tr><td>

[css](../fast-element.css/)


</td><td>

Transforms a template literal string into styles.


</td></tr>
<tr><td>

[CSSDirective](../fast-element.cssdirective/)


</td><td>

Instructs the css engine to provide styles during CSS template composition.


</td></tr>
<tr><td>

[DefaultResolver](../fast-element.defaultresolver/)


</td><td>

A set of default resolvers useful in configuring a container.


</td></tr>
<tr><td>

[deferHydrationAttribute](../fast-element.deferhydrationattribute/)


</td><td>

**_(BETA)_** The attribute used to defer hydration of an element. Retained for intersection observer viewport hydration rendering.


</td></tr>
<tr><td>

[DI](../fast-element.di/)


</td><td>

The gateway to dependency injection APIs.


</td></tr>
<tr><td>

[DOM](../fast-element.dom/)


</td><td>

Common DOM APIs.


</td></tr>
<tr><td>

[DOMAspect](../fast-element.domaspect/)


</td><td>

The type of HTML aspect to target.


</td></tr>
<tr><td>

[DOMContainer](../fast-element.domcontainer/)


</td><td>

The key that resolves a DOMContainer itself.


</td></tr>
<tr><td>

[DOMPolicy](../fast-element.dompolicy/)


</td><td>

A helper for creating DOM policies.


</td></tr>
<tr><td>

[emptyArray](../fast-element.emptyarray/)


</td><td>

A readonly, empty array.


</td></tr>
<tr><td>

[eventArgAccessor](../fast-element.eventargaccessor/)


</td><td>

Event argument accessor for declarative event bindings.


</td></tr>
<tr><td>

[ExecutionContext](../fast-element.executioncontext/)


</td><td>

Provides additional contextual information available to behaviors and expressions.


</td></tr>
<tr><td>

[executionContextAccessor](../fast-element.executioncontextaccessor/)


</td><td>

Execution context accessor for declarative event bindings.


</td></tr>
<tr><td>

[FAST](../fast-element.fast/)


</td><td>

The FAST messaging API for warnings and errors.


</td></tr>
<tr><td>

[FASTElement](../fast-element.fastelement/)


</td><td>

A minimal base class for FASTElements that also provides static helpers for working with FASTElements.


</td></tr>
<tr><td>

[html](../fast-element.html/)


</td><td>

Transforms a template literal string into a ViewTemplate.


</td></tr>
<tr><td>

[HTMLDirective](../fast-element.htmldirective/)


</td><td>

Instructs the template engine to apply behavior to a node.


</td></tr>
<tr><td>

[LogicalOperator](../fast-element.logicaloperator/)


</td><td>

Logical operator tokens.


</td></tr>
<tr><td>

[Markup](../fast-element.markup/)


</td><td>

Common APIs related to markup generation.


</td></tr>
<tr><td>

[nullableBooleanConverter](../fast-element.nullablebooleanconverter/)


</td><td>

A [ValueConverter](../fast-element.valueconverter/) that converts to and from `boolean` values. `null`<!-- -->, `undefined`<!-- -->, `""`<!-- -->, and `void` values are converted to `null`<!-- -->.


</td></tr>
<tr><td>

[nullableNumberConverter](../fast-element.nullablenumberconverter/)


</td><td>

A [ValueConverter](../fast-element.valueconverter/) that converts to and from `number` values.


</td></tr>
<tr><td>

[Observable](../fast-element.observable/)


</td><td>

Common Observable APIs.


</td></tr>
<tr><td>

[Operator](../fast-element.operator/)


</td><td>

Declarative expression operator tokens.


</td></tr>
<tr><td>

[Parser](../fast-element.parser/)


</td><td>

Common APIs related to content parsing.


</td></tr>
<tr><td>

[Registration](../fast-element.registration/)


</td><td>

You can use the resulting Registration of any of the factory methods to register with the container.


</td></tr>
<tr><td>

[schemaRegistry](../fast-element.schemaregistry/)


</td><td>

Module-level registry that maps custom element names to their schema maps. Used for cross-element `$ref` resolution (e.g. nested element schemas). Each Schema instance registers itself here on construction.


</td></tr>
<tr><td>

[ServiceLocator](../fast-element.servicelocator/)


</td><td>

The key that resolves the ServiceLocator itself.


</td></tr>
<tr><td>

[Signal](../fast-element.signal/)


</td><td>

The gateway to signal APIs.


</td></tr>
<tr><td>

[SourceLifetime](../fast-element.sourcelifetime/)


</td><td>

Describes how the source's lifetime relates to its controller's lifetime.


</td></tr>
<tr><td>

[SpliceStrategy](../fast-element.splicestrategy/)


</td><td>

Functionality related to tracking changes in arrays.


</td></tr>
<tr><td>

[SpliceStrategySupport](../fast-element.splicestrategysupport/)


</td><td>

Indicates what level of feature support the splice strategy provides.


</td></tr>
<tr><td>

[TwoWaySettings](../fast-element.twowaysettings/)


</td><td>

Enables configuring two-way binding settings.


</td></tr>
<tr><td>

[Updates](../fast-element.updates/)


</td><td>

The default UpdateQueue.


</td></tr>
<tr><td>

[ViewBehaviorOrchestrator](../fast-element.viewbehaviororchestrator/)


</td><td>

Bridges between ViewBehaviors and HostBehaviors, enabling a host to control ViewBehaviors.


</td></tr>
</tbody></table>

## Type Aliases

<table><thead><tr><th>

Type Alias


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AddViewBehaviorFactory](../fast-element.addviewbehaviorfactory/)


</td><td>

Used to add behavior factories when constructing templates.


</td></tr>
<tr><td>

[AsyncRegistrationLocator](../fast-element.asyncregistrationlocator/)


</td><td>

A function capable of asynchronously locating a resolver for a key.


</td></tr>
<tr><td>

[AttributeConfiguration](../fast-element.attributeconfiguration/)


</td><td>

Metadata used to configure a custom attribute's behavior.


</td></tr>
<tr><td>

[AttributeDirective](../fast-element.attributedirective/)


</td><td>

Declarative attribute directive names.


</td></tr>
<tr><td>

[AttributeMode](../fast-element.attributemode/)


</td><td>

The mode that specifies the runtime behavior of the attribute.


</td></tr>
<tr><td>

[BehaviorType](../fast-element.behaviortype/)


</td><td>

Declarative behavior type.


</td></tr>
<tr><td>

[CachedPath](../fast-element.cachedpath/)


</td><td>

A path discovered while parsing a template.


</td></tr>
<tr><td>

[CachedPathMap](../fast-element.cachedpathmap/)


</td><td>

A map from element names and root properties to JSON schemas.


</td></tr>
<tr><td>

[Callable](../fast-element.callable/)


</td><td>

Represents a callable type such as a function or an object with a "call" method.


</td></tr>
<tr><td>

[ChildrenDirectiveOptions](../fast-element.childrendirectiveoptions/)


</td><td>

The options used to configure child/subtree node observation.


</td></tr>
<tr><td>

[Class](../fast-element.class/)


</td><td>

Represents a constructable class with a prototype.


</td></tr>
<tr><td>

[ComparisonOperator](../fast-element.comparisonoperator/)


</td><td>

Comparison operator token.


</td></tr>
<tr><td>

[CompilationStrategy](../fast-element.compilationstrategy/)


</td><td>

A function capable of compiling a template from the preprocessed form produced by the html template function into a result that can instantiate views.


</td></tr>
<tr><td>

[CompiledViewBehaviorFactory](../fast-element.compiledviewbehaviorfactory/)


</td><td>

Represents a ViewBehaviorFactory after the compilation process has completed.


</td></tr>
<tr><td>

[ComposableStyles](../fast-element.composablestyles/)


</td><td>

Represents styles that can be composed into the ShadowDOM of a custom element.


</td></tr>
<tr><td>

[ComputedBuilder](../fast-element.computedbuilder/)


</td><td>

**_(BETA)_** Provides computed state capabilities.


</td></tr>
<tr><td>

[ComputedInitializer](../fast-element.computedinitializer/)


</td><td>

**_(BETA)_** A callback that initializes the computation.


</td></tr>
<tr><td>

[ComputedSetupCallback](../fast-element.computedsetupcallback/)


</td><td>

**_(BETA)_** A callback that enables computation setup.


</td></tr>
<tr><td>

[ComputedState](../fast-element.computedstate/)


</td><td>

**_(BETA)_** State whose value is computed from other dependencies.


</td></tr>
<tr><td>

[Constructable](../fast-element.constructable/)


</td><td>

Represents a type which can be constructed with the new operator.


</td></tr>
<tr><td>

[ConstructibleStyleStrategy](../fast-element.constructiblestylestrategy/)


</td><td>

A type that instantiates a StyleStrategy.


</td></tr>
<tr><td>

[Context](../fast-element.context/)


</td><td>

A Context object defines an optional initial value for a Context, as well as a name identifier for debugging purposes.


</td></tr>
<tr><td>

[ContextCallback](../fast-element.contextcallback/)


</td><td>

A callback which is provided by a context requester and is called with the value satisfying the request. This callback can be called multiple times by context providers as the requested value is changed.


</td></tr>
<tr><td>

[ContextDecorator](../fast-element.contextdecorator/)


</td><td>

A constant key that can be used to represent a Context dependency. The key can be used for context or DI but also doubles as a decorator for resolving the associated dependency.


</td></tr>
<tr><td>

[ContextType](../fast-element.contexttype/)


</td><td>

A helper type which can extract a Context value type from a Context type


</td></tr>
<tr><td>

[CSSTemplateTag](../fast-element.csstemplatetag/)


</td><td>

Transforms a template literal string into styles.


</td></tr>
<tr><td>

[CSSValue](../fast-element.cssvalue/)


</td><td>

Represents the types of values that can be interpolated into a template.


</td></tr>
<tr><td>

[DataBindingBehaviorConfig](../fast-element.databindingbehaviorconfig/)


</td><td>

Declarative data binding behavior configuration.


</td></tr>
<tr><td>

[DataBindingBindingType](../fast-element.databindingbindingtype/)


</td><td>

Declarative data binding marker type.


</td></tr>
<tr><td>

[DecoratorAttributeConfiguration](../fast-element.decoratorattributeconfiguration/)


</td><td>

Metadata used to configure a custom attribute's behavior through a decorator.


</td></tr>
<tr><td>

[DOMAspect](../fast-element.domaspect/)


</td><td>

The type of HTML aspect to target.


</td></tr>
<tr><td>

[DOMAspectGuards](../fast-element.domaspectguards/)


</td><td>

Aspect-specific guards for a DOM Policy.


</td></tr>
<tr><td>

[DOMElementGuards](../fast-element.domelementguards/)


</td><td>

Element-specific guards for a DOM Policy.


</td></tr>
<tr><td>

[DOMGuards](../fast-element.domguards/)


</td><td>

Guard configuration for a DOM Policy.


</td></tr>
<tr><td>

[DOMPolicyOptions](../fast-element.dompolicyoptions/)


</td><td>

Options for creating a DOM Policy.


</td></tr>
<tr><td>

[DOMSink](../fast-element.domsink/)


</td><td>

A function used to send values to a DOM sink.


</td></tr>
<tr><td>

[DOMSinkGuards](../fast-element.domsinkguards/)


</td><td>

A specific DOM sink guard for a node aspect.


</td></tr>
<tr><td>

[ElementsFilter](../fast-element.elementsfilter/)


</td><td>

Elements filter function type.


</td></tr>
<tr><td>

[EventArgType](../fast-element.eventargtype/)


</td><td>

The type of a parsed event handler argument.


</td></tr>
<tr><td>

[Expression](../fast-element.expression/)


</td><td>

The signature of an arrow function capable of being evaluated against source data and within an execution context.


</td></tr>
<tr><td>

[FASTContext](../fast-element.fastcontext/)


</td><td>

A Context object defines an optional initial value for a Context, as well as a name identifier for debugging purposes. The FASTContext can also be used as a decorator to declare context dependencies or as a key for DI.


</td></tr>
<tr><td>

[FASTContextRequestStrategy](../fast-element.fastcontextrequeststrategy/)


</td><td>

A strategy that controls how all Context.request API calls are handled.


</td></tr>
<tr><td>

[FASTElementExtension](../fast-element.fastelementextension/)


</td><td>

A callback that receives a FASTElementDefinition during element registration. Extensions are invoked before the element is registered with the platform, allowing plugins to inspect or act on the resolved definition.


</td></tr>
<tr><td>

[FASTElementTemplateResolver](../fast-element.fastelementtemplateresolver/)


</td><td>

Resolves an element template from a composed definition.


</td></tr>
<tr><td>

[HTMLTemplateTag](../fast-element.htmltemplatetag/)


</td><td>

Transforms a template literal string into a ViewTemplate.


</td></tr>
<tr><td>

[Injectable](../fast-element.injectable/)


</td><td>

A class that declares constructor injected dependencies through a static "inject" field array of keys.


</td></tr>
<tr><td>

[Key](../fast-element.key/)


</td><td>

A key that is used to register dependencies with a dependency injection container.


</td></tr>
<tr><td>

[LogicalOperator](../fast-element.logicaloperator/)


</td><td>

Logical operator token.


</td></tr>
<tr><td>

[ObserverMapPathEntry](../fast-element.observermappathentry/)


</td><td>

A node in the observer-map path tree.

- `true` → observe this path and all descendants (unless overridden by children). - `false` → do NOT observe this path or its descendants (unless overridden by children). - `ObserverMapPathNode` → configure child paths individually; the node itself is observed if `$observe` is true (default when parent is observed).


</td></tr>
<tr><td>

[Operator](../fast-element.operator/)


</td><td>

Declarative expression operator token.


</td></tr>
<tr><td>

[OwnedState](../fast-element.ownedstate/)


</td><td>

**_(BETA)_** A read/write stateful value associated with an owner.


</td></tr>
<tr><td>

[ParentLocator](../fast-element.parentlocator/)


</td><td>

A function capable of locating the parent container based on a container's owner.


</td></tr>
<tr><td>

[PathType](../fast-element.pathtype/)


</td><td>

Declarative schema path type.


</td></tr>
<tr><td>

[ReadonlyOwnedState](../fast-element.readonlyownedstate/)


</td><td>

**_(BETA)_** A readonly stateful value associated with an object owner.


</td></tr>
<tr><td>

[ReadonlyState](../fast-element.readonlystate/)


</td><td>

**_(BETA)_** A readonly stateful value.


</td></tr>
<tr><td>

[RegisterSelf](../fast-element.registerself/)


</td><td>

Represents an object that can register itself.


</td></tr>
<tr><td>

[ResolveCallback](../fast-element.resolvecallback/)


</td><td>

Represents a custom callback for resolving a request from the container. The handler is the container that is invoking the callback. The requestor is the original container that made the request. The handler and the requestor may not be the same if the request has bubbled up to a parent container in the DI hierarchy. The resolver is the instance of the resolver that stores the callback. This is provided in case the callback needs a place or key against which to store state across resolutions.


</td></tr>
<tr><td>

[Resolved](../fast-element.resolved/)


</td><td>

Represents something resolved from a service locator.


</td></tr>
<tr><td>

[SourceLifetime](../fast-element.sourcelifetime/)


</td><td>

Describes how the source's lifetime relates to its controller's lifetime.


</td></tr>
<tr><td>

[SpliceStrategySupport](../fast-element.splicestrategysupport/)


</td><td>

The available values for SpliceStrategySupport.


</td></tr>
<tr><td>

[State](../fast-element.state/)


</td><td>

**_(BETA)_** A read/write stateful value.


</td></tr>
<tr><td>

[StateOptions](../fast-element.stateoptions/)


</td><td>

**_(BETA)_** Options for creating state.


</td></tr>
<tr><td>

[TemplateDirective](../fast-element.templatedirective/)


</td><td>

Declarative template directive names.


</td></tr>
<tr><td>

[TemplateValue](../fast-element.templatevalue/)


</td><td>

Represents the types of values that can be interpolated into a template.


</td></tr>
<tr><td>

[Transformer\_2](../fast-element.transformer_2/)


</td><td>

Transforms an object after it is created but before it is returned to the requestor.


</td></tr>
<tr><td>

[TrustedTypesPolicy](../fast-element.trustedtypespolicy/)


</td><td>

A policy for use with the standard trustedTypes platform API.


</td></tr>
<tr><td>

[TwoWayBindingOptions](../fast-element.twowaybindingoptions/)


</td><td>

The twoWay binding options.


</td></tr>
<tr><td>

[UnknownContext](../fast-element.unknowncontext/)


</td><td>

An unknown context type.


</td></tr>
<tr><td>

[ViewBehaviorTargets](../fast-element.viewbehaviortargets/)


</td><td>

The target nodes available to a behavior.


</td></tr>
</tbody></table>
